fix size and placing for blurred avatar in author-modal and in right panel

--- a/src/dotnet/UI.Blazor/Components/Avatar/avatar.css
+++ b/src/dotnet/UI.Blazor/Components/Avatar/avatar.css
@@ -44,6 +44,7 @@
 .avatar-circle > .c-content > .c-avatar.pic-blurred {
     @apply blur-lg;
     @apply opacity-70;
+    @apply brightness-75;
 }
 /* This dummy selector just "uses" the widths that are picked randomly by AuthorName.razor */
 .avatar-name-spacing {
